<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="app1_text">SPOTIFY STREAMER</string>
    <string name="app2_text">SCORES APP</string>
    <string name="app3_text">LIBRARY APP</string>
    <string name="app4_text">BUILD IT BIGGER</string>
    <string name="app5_text">XYZ READER</string>
    <string name="app6_text">CAPSTONE:MY OWN APP</string>
    <string name="heading">My Nanodegree Apps!</string>
</resources>
