<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#B2EBF2"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main" tools:context=".MainActivity">

    <TextView
        android:text="@string/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView" />

    <Button
        style="@style/MyappBtn"
        android:text="@string/app1_text"
        android:id="@+id/b1"
        android:layout_below="@+id/textView"
        android:layout_marginTop="51dp"
        android:onClick="performAction" />

    <Button
        style="@style/MyappBtn"
        android:text="@string/app2_text"
        android:id="@+id/b2"
        android:layout_below="@+id/b1"
        android:onClick="performAction" />

    <Button
        style="@style/MyappBtn"
        android:text="@string/app3_text"
        android:id="@+id/b3"
        android:layout_below="@+id/b2"
        android:onClick="performAction" />

    <Button
        style="@style/MyappBtn"
        android:text="@string/app4_text"
        android:id="@+id/b4"
        android:layout_below="@+id/b3"
        android:onClick="performAction" />

    <Button
        style="@style/MyappBtn"
        android:text="@string/app5_text"
        android:id="@+id/b5"
        android:layout_below="@+id/b4"
        android:onClick="performAction" />

    <Button
        style="@style/MyappBtn"
        android:text="@string/app6_text"
        android:id="@+id/b6"
        android:background="#E91E63"
        android:layout_below="@+id/b5"
        android:onClick="performAction" />


</RelativeLayout>
